tests/bad/array-bound-nonconstant.pas
program array_bound_nonconstant;

var
    n;
    a: array[0..n] of integer;

begin
    n := 3;
    a[0] := 1
end.
